--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,2 @@
 bin_PROGRAMS = knights_tour
-knights_tour_SOURCES = src/knights_tour.cpp src/utils.cpp src/unvisited_degree.cpp src/squares.cpp
+knights_tour_SOURCES = src/knights_tour.cpp src/game_state.cpp src/utils.cpp src/unvisited_degree.cpp src/squares.cpp
