--- a/Makefile.am
+++ b/Makefile.am
@@ -1,2 +1,4 @@
+AUTOMAKE_OPTIONS=subdir-objects
 bin_PROGRAMS = knights_tour
 knights_tour_SOURCES = src/knights_tour.cpp src/game_state.cpp src/utils.cpp src/unvisited_degree.cpp src/squares.cpp
+AM_CXXFLAGS = -std=c++0x
