automake test scaffolding

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,7 @@
-AUTOMAKE_OPTIONS=subdir-objects
 bin_PROGRAMS = knights_tour
 knights_tour_SOURCES = src/knights_tour.cpp src/game_state.cpp src/utils.cpp src/unvisited_degree.cpp src/squares.cpp
 AM_CXXFLAGS = -std=c++0x
+
+TESTS = tests/test_util
+check_PROGRAMS = test_util
+test_util_SOURCES = tests/test_util.cpp src/utils.cpp
