--- a/Makefile.am
+++ b/Makefile.am
@@ -2,6 +2,7 @@ bin_PROGRAMS = knights_tour
 knights_tour_SOURCES = src/knights_tour.cpp src/game_state.cpp src/utils.cpp src/unvisited_degree.cpp src/squares.cpp
 AM_CXXFLAGS = -std=c++0x
 
-TESTS = tests/test_util
-check_PROGRAMS = test_util
-test_util_SOURCES = tests/test_util.cpp src/utils.cpp
+TESTS = testrunner
+check_PROGRAMS = testrunner
+testrunner_SOURCES = tests/test_knights_tour.cpp src/utils.cpp src/game_state.cpp src/unvisited_degree.cpp src/squares.cpp
+testrunner_CXXFLAGS = @CXXFLAGS@
